finally completes cinema room manager

--- a/Cinema Room Manager/Cinema Room Manager/Menu, please/task-info.yaml
+++ b/Cinema Room Manager/Cinema Room Manager/Menu, please/task-info.yaml
@@ -345,8 +345,5 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/11108#comment
-status: Solved
-feedback:
-  message: Congratulations!
-  time: "Wed, 29 Nov 2023 23:48:04 UTC"
+status: Unchecked
 record: 4
