--- a/Cinema Room Manager/Cinema Room Manager/Menu, please/task-info.yaml
+++ b/Cinema Room Manager/Cinema Room Manager/Menu, please/task-info.yaml
@@ -345,5 +345,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/11108#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Wed, 29 Nov 2023 23:48:04 UTC"
 record: 4
