--- a/Cinema Room Manager/course-remote-info.yaml
+++ b/Cinema Room Manager/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/25168/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Wed, 29 Nov 2023 19:51:56 UTC"
+update_date: "Fri, 01 Dec 2023 00:40:42 UTC"
 stages:
   - id: 709
     step: 11105
@@ -16,7 +16,7 @@ stages:
     is_completed: true
   - id: 712
     step: 11108
-    is_completed: false
+    is_completed: true
   - id: 713
     step: 11109
     is_completed: true
