--- a/Zookeeper with Java/Zookeeper with Java/Sustainable care  3/task-info.yaml
+++ b/Zookeeper with Java/Zookeeper with Java/Sustainable care  3/task-info.yaml
@@ -185,6 +185,10 @@ files:
     \ + \"' \" +\n                \"at the end of the program\");\n        }\n\n \
     \       return CheckResult.correct();\n    }\n}"
     learner_created: false
-feedback_link: https://hyperskill.org/projects/229/stages/1150/implement#comment
-status: Unchecked
+feedback_link: https://hyperskill.org/learn/step/17791#comment
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Fri, 01 Dec 2023 03:19:44 UTC"
 record: -1
