completes part 2 of project

--- a/Traffic Light (Java)/Traffic Light (Java)/Set up the traffic light/task-info.yaml
+++ b/Traffic Light (Java)/Traffic Light (Java)/Set up the traffic light/task-info.yaml
@@ -861,5 +861,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/projects/288/stages/1501/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sun, 03 Dec 2023 22:39:04 UTC"
 record: -1
