--- a/Traffic Light (Java)/Traffic Light (Java)/Like a clockwork/task-info.yaml
+++ b/Traffic Light (Java)/Traffic Light (Java)/Like a clockwork/task-info.yaml
@@ -916,6 +916,9 @@ files:
           }
       }
     learner_created: true
+  - name: src/traffic/QueueThread.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/projects/288/stages/1503/implement#comment
 status: Unchecked
 record: -1
