working on ship length calculator

--- a/Battleship with Java/The first ship/task-info.yaml
+++ b/Battleship with Java/The first ship/task-info.yaml
@@ -160,5 +160,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/projects/383/stages/2281/implement#comment
-status: Unchecked
+status: Failed
+feedback:
+  message: Execution failed
+  time: "Fri, 08 Dec 2023 19:43:18 UTC"
 record: -1
