finishes this part

--- a/Battleship with Java/The first ship/task-info.yaml
+++ b/Battleship with Java/The first ship/task-info.yaml
@@ -163,8 +163,8 @@ files:
     visible: true
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/35304#comment
-status: Failed
+status: Solved
 feedback:
-  message: Failed to launch checking
-  time: "Sat, 16 Dec 2023 21:08:04 UTC"
+  message: Congratulations!
+  time: "Sat, 16 Dec 2023 21:30:30 UTC"
 record: -1
